# server

./: CMakeLists.txt  MMech.cpp  MMech.h  client.cpp  client.h  config.cpp  config.h  debug.h  device.cpp  device.h  executor.cpp  executor.h  file_reader.cpp  file_reader.h  log.cpp  log.h  main.cpp  server.cpp  server.h  utils.cpp  utils.h
